<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmarPedidoActivity">

    <TextView
        android:id="@+id/txtConfPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:text="@string/txtConfPedido" />

    <TextView
        android:id="@+id/txtConfComida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtConfMetPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/txtConfSobremesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:text="@string/txtConfSobreMesa" />

    <Spinner
        android:id="@+id/spnArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnConfSobremesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_adicionarSobremesa" />

    <TextView
        android:id="@+id/txtSpnSobremesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtConfComentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:text="@string/txt_confComentarios" />

    <EditText
        android:id="@+id/edtConfComentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_confComentarios"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnConfComentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_adicionarComentarios" />

    <ListView
        android:id="@+id/lstConfComentarios"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>